use CSS for IE, don't base login on mycelium

--- a/mycelium/apps/accounts/templates/accounts/base_login.html
+++ b/mycelium/apps/accounts/templates/accounts/base_login.html
@@ -1,6 +1,7 @@
-{% extends "mycelium_base.html" %}
+{% extends "base.html" %}
 {% block title %}Log in to GoodCloud{% endblock %}
-{% block head %}{{block.super}}
+{% block css %}{{block.super}}
+{% css "css/mycelium_base.css" %}
 {% css "css/login.css" %}
 {% endblock %}
 
