more ie6 tweaks

--- a/mycelium/apps/accounts/templates/accounts/login.html
+++ b/mycelium/apps/accounts/templates/accounts/login.html
@@ -16,6 +16,12 @@
 		.unsupported_browser {
 			display: block;
 		}
+		.unsupported_browser .browser_option.first {
+			margin-left: 2%;
+		}
+		.field {
+			width: 80%;
+		}
 	</style>
 <![endif]-->
 
