including js super helps

--- a/mycelium/apps/accounts/templates/accounts/login.html
+++ b/mycelium/apps/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base_login.html" %}
 
-{% block javascript %}
+{% block javascript %}{{block.super}}
 	<script type="text/javascript">
 		$(function(){
 			var version = parseInt($.browser.version, 10);
