--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -32,7 +32,7 @@
 {% block javascript %}
 <!--[if lt IE 7 ]>
   {% js "js/lib/dd_belatedpng.js" %}
-  <script>DD_belatedPNG.fix('img');</script>
+  <script>DD_belatedPNG.fix('img, .png_bg');</script>
 <![endif]-->
 {% endblock %}
 </body>
