applying lots of pngfixes

--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -7,7 +7,7 @@
 <div class="page_header about_us">Do Good Things.</div>
 
 <div id="side_nav" class="tabs">
-	<ul class="nav_links">
+	<ul class="nav_links png_bg">
 	 	<li><a href="#our_mission">Our Mission</a></li>
 	 	<li><a href="#the_team">Our Team</a></li>
  	</ul>
@@ -33,7 +33,7 @@
 		<div class="tab_subheading team_description">GoodCloud is currently a team of two people. We're the ones who answer your calls, add new features, and talk with you about your needs.  Sounds a lot better than a call center halfway across the world, doesn't it? </div>
 		{# <div class="tab_title">Our Team</div> #}
 
-		<div class="person tom">
+		<div class="person tom png_bg">
 			<div class="tab_subheading">Tom Noble</div>
 			<div class="title">Co-Founder, COO, Chief Relationship Builder, Support Staff, Mail Clerk</div>
 			<div class="person_description">
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 
-		<div class="person steven">
+		<div class="person steven png_bg">
 			<div class="tab_subheading">Steven Skoczen</div>
 			<div class="title">Co-Founder, CEO, Director of Making Awesome Software, Support Staff, Coffee-Boy</div>
 			<div class="person_description">
