--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -6,13 +6,13 @@
 {% block page_content %}
 <div class="page_header">Love for the <img class="the_cloud" src="{% media_url "images/goodcloud-logo-60-with-shadow.png" %}" /></div>
 
-<div class="testimonial style_3">
+<div class="testimonial png_bg style_3">
 	<div class="quote">Very Easy! I love how when I start typing the name it comes up mid-word. It reads my mind!</div>
 	<div class="person">-Rachel L.</div>
 	<div class="organization"><a href="http://www.outsidethelens.org/" target="_blank">Outside the Lens</a></div>
 </div>
 
-<div class="testimonial style_1">
+<div class="testimonial png_bg style_1">
 	<div class="quote">Too easy. Is this for real?!</div>
 	<div class="person">-Amanda A.</div>
  	<div class="organization"><a href="http://stgerardhouse.com/" target="_blank">St. Gerard House</a></div> 
@@ -21,7 +21,7 @@
 
 <div class="clearfix right_bubble_clear"></div>
 
-<div class="testimonial style_2">
+<div class="testimonial png_bg style_2">
 	<div class="quote">Extremely easy to understand. Extremely quick. Extremely flexible.</div>
 	<div class="person">-Nathaniel H.</div>
 	<div class="organization"><a href="http://congoleaders.org/" target="_blank">Congo Leadership Initiative</a></div>
@@ -29,6 +29,6 @@
 
 
 
-<a href="{% url accounts:signup %}" class="page_action">Discover what you love with a Free Trial!</a>
+<a href="{% url accounts:signup %}" class="page_action png_bg">Discover what you love with a Free Trial!</a>
 
 {% endblock %}
