--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -27,6 +27,6 @@ The first 30 days are on us. Give it a try, and see for yourself.
 </div>
 
 <div class="clearfix"></div>
-<a href="{% url accounts:signup %}" class="page_action">Start your free trial now!</a>
+<a href="{% url accounts:signup %}" class="page_action png_bg">Start your free trial now!</a>
 
 {% endblock %}
