--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -12,6 +12,6 @@
 </div>
 
 <div class="clearfix"></div>
-<a href="{% url accounts:signup %}" class="page_action">Now, try it out yourself!</a>
+<a href="{% url accounts:signup %}" class="page_action png_bg">Now, try it out yourself!</a>
 
 {% endblock %}
