--- a/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
@@ -1,7 +1,7 @@
 {% load i18n %}{% load cache current_page %}
 {% block nav %}
-<div id="nav_and_logo_container">
-	<a id="logo" href="{% url marketing_site:home %}">
+<div id="nav_and_logo_container" class="png_bg">
+	<a id="logo" href="{% url marketing_site:home %}" class="png_bg">
 		
 	</a>
 <div id="main_nav">{% spaceless %}
