--- a/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
@@ -11,15 +11,15 @@
 <div class="container">
 <div class="row">
 	<a class="fourcol contact_button email" href="mailto:support@agoodcloud.com">
-		<div class="type">Email</div>
+		<div class="type png_bg">Email</div>
 		<div class="details identical_height_block">Send an email to support@agoodcloud.org</div>
 	</a>
 	<a class="fourcol contact_button online" href="#">
-		<div class="type">Online</div>
+		<div class="type png_bg">Online</div>
 		<div class="details identical_height_block">Send us a question or idea right from the website</div>
 	</a>
 	<div class="fourcol contact_button phone">
-		<div class="type">Phone</div>
+		<div class="type png_bg">Phone</div>
 		<div class="details identical_height_block">Give us a call at (503) 308-1460</div>
 	</div>
 </div>
