--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -31,12 +31,8 @@
 {% analytical_body_bottom %}
 {% block javascript %}
 <!--[if lt IE 7 ]>
-  {% js "js/contrib/jquery.pngFix.js" %}
-  <script type="text/javascript">
-  	$(document).ready(function(){ 
-        $(document).pngFix(); 
-    });
-   </script>
+  {% js "js/lib/dd_belatedpng.js" %}
+  <script>DD_belatedPNG.fix('img, .png_bg');</script>
 <![endif]-->
 {% endblock %}
 </body>
