--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -9,81 +9,81 @@
 <div class="container">
 	<div class="row">
 	{# GoodCloud is a database and operations suite for small nonprofits.  #}
-	<div class="feature png_bg find_fast">
+	<div class="feature find_fast">
 		<div class="title">Find people fast</div>
-		<div class="description identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
+		<div class="description png_bg identical_height_block">The fastest, easiest contact lookup on this side of the galaxy.
 Nonprofits told us that looking up a phone number, email or address is something they do hundreds of times a day. We optimized GoodCloud to make finding a contact super-fast.</div>
 	</div>
 	
-	<div class="feature png_bg full_contact">
+	<div class="feature full_contact">
 		<div class="title">Full contact information </div>
-		<div class="description identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
+		<div class="description png_bg identical_height_block">It’s all here - home and work addresses, organizations, employees, and email. We’ve even got support for the next generation of contact info, like twitter. You'll never lose an address again.</div>
 	</div>
 	</div>
 	<div class="row">
 	
-	<div class="feature png_bg groups">
+	<div class="feature groups">
 		<div class="title">Organize people the way you work</div>
-		<div class="description identical_height_block">Intuitively create groups of people that fit your mission, and have them automatically stay up to date. Use your groups to contact people, send letters, and more. </div>
+		<div class="description png_bg identical_height_block">Intuitively create groups of people that fit your mission, and have them automatically stay up to date. Use your groups to contact people, send letters, and more. </div>
 	</div>
 	
-	<div class="feature png_bg volunteer">
+	<div class="feature volunteer">
 		<div class="title">Track volunteer hours</div>
-		<div class="description identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
+		<div class="description png_bg identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
 	</div>
 	</div>
 
 	<div class="row">
 	
-	<div class="feature png_bg donations">
+	<div class="feature donations">
 		<div class="title">Easily record donations</div>
-		<div class="description identical_height_block">Enter a donation once, then easily make reports and view summary statistics. Now it's easy to keep track of where the funding comes from, and plan for the future.</div>
+		<div class="description png_bg identical_height_block">Enter a donation once, then easily make reports and view summary statistics. Now it's easy to keep track of where the funding comes from, and plan for the future.</div>
 	</div>
 
-<!--	<div class="feature png_bg thank_you_letters">
+<!--	<div class="feature thank_you_letters">
 		<div class="title">Thank you letters</div>
-		<div class="description identical_height_block">Create fields that fit your mission
+		<div class="description png_bg identical_height_block">Create fields that fit your mission
 Every nonprofit is different - that’s why we’ve made it easy to set your own categories and tags for people, and integrated them throughout GoodCloud.</div>
 	</div> 
 -->
-	<div class="feature png_bg custom_tags">
+	<div class="feature custom_tags">
 		<div class="title">Make your own tags</div>
-		<div class="description identical_height_block">Every nonprofit is different - that’s why we’ve made it easy to make your own categories and tags for people, and integrated your custom tags throughout GoodCloud.</div>
+		<div class="description png_bg identical_height_block">Every nonprofit is different - that’s why we’ve made it easy to make your own categories and tags for people, and integrated your custom tags throughout GoodCloud.</div>
 	</div>
 
 	</div>
 
 	<div class="row">
-	<div class="feature png_bg spreadsheet">
+	<div class="feature spreadsheet">
 		<div class="title">Sometimes, you just need a spreadsheet.</div>
-		<div class="description identical_height_block">We made it easy to download spreadsheets of anything in GoodCloud. When you’ve gotta make a chart/print a book/make program notes, GoodCloud gives you the data you need, and gets out of your way.</div>
+		<div class="description png_bg identical_height_block">We made it easy to download spreadsheets of anything in GoodCloud. When you’ve gotta make a chart/print a book/make program notes, GoodCloud gives you the data you need, and gets out of your way.</div>
 	</div>
 
-	<div class="feature png_bg data_import">
+	<div class="feature data_import">
 		<div class="title">Bring your data with you</div>
-		<div class="description identical_height_block">You’ve got a system you’re using right now, and there’s no way we’d ask you to type everything in again. Our advanced data import tool makes it a snap to bring your current data into GoodCloud.</div>
+		<div class="description png_bg identical_height_block">You’ve got a system you’re using right now, and there’s no way we’d ask you to type everything in again. Our advanced data import tool makes it a snap to bring your current data into GoodCloud.</div>
 	</div>
 	</div>
 
 	<div class="row">
 
-	<div class="feature png_bg support">
+	<div class="feature support">
 		<div class="title">Real-people support</div>
-		<div class="description identical_height_block">We answer the phone. And our email.  
+		<div class="description png_bg identical_height_block">We answer the phone. And our email.  
 We know you don’t have an IT department, and you don’t want to spend your days futzing with a database.  That’s why we’re available anytime to answer questions, listen, and fix any issues you run into.</div>
 	</div>
-	<div class="feature png_bg cloud">
+	<div class="feature cloud">
 			<div class="title">We're on the Cloud</div>
-			<div class="description identical_height_block">No more servers.
+			<div class="description png_bg identical_height_block">No more servers.
 	The cloud has been transforming businesses for the last few years, and GoodCloud brings those benefits to small nonprofits. We’ll take care of managing and securing the servers - and leave you time to focus on your mission.</div>
 	</div>
 
 	</div>
 
 	<div class="row">
-		<div class="feature png_bg more_to_come">
+		<div class="feature more_to_come">
 			<div class="title">We're not done yet</div>
-			<div class="description identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
+			<div class="description png_bg identical_height_block">We're not stopping until GoodCloud takes care of all of your computer headaches, without making any new ones. We've got features on the road-map for Develoment Directors, Volunteer Coordinators, Executive Directors, and Volunteers!</div>
 		</div>
 		<div class="">
 
