--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -9,21 +9,21 @@
 	<div class="row">
 		<div class="fourcol home_box built_for_nonprofits">
 			<div class="title">Built for Small Nonprofits</div>
-			<div class="description identical_height_block">
+			<div class="description png_bg identical_height_block">
 				GoodCloud was built in collaboration with small nonprofits, so it does the things you actually want.
 			</div>
 			<div class="action"><a href="{% url marketing_site:features %}">Check out what it can do!</a></div>
 		</div>
 		<div class="fourcol home_box loved_by">
 			<div class="title">Loved by Nonprofits</div>
-			<div class="description identical_height_block">
+			<div class="description png_bg identical_height_block">
 				People love using GoodCloud. Small nonprofit staff and volunteers alike rave about how easy it is to use.
 			</div>
 			<div class="action"><a href="{% url marketing_site:praise %}">See what they had to say!</a></div>
 		</div>
 		<div class="fourcol home_box ready_to_go">
 			<div class="title">Ready to Go Today</div>
-			<div class="description identical_height_block">
+			<div class="description png_bg identical_height_block">
 				Sign up for a free trial account in less than 60 seconds. No strings, no hassle, no credit card.
 			</div>
 			<div class="action"><a href="{% url accounts:signup %}">Try GoodCloud now!</a></div>
