fixed chrome link

--- a/mycelium/apps/accounts/templates/accounts/login.html
+++ b/mycelium/apps/accounts/templates/accounts/login.html
@@ -41,7 +41,7 @@
 		<div class="warning_title">Hang on there!</div>
 		<div class="warning_body">You're using an unsupported browser.  GoodCloud was built on next-generation tech to make it faster and more secure. To use GoodCloud, you'll need one of these:</div>
 		<div class="browser_options">
-			<a href="http://www.google.com/chrome/intl/en/make/download-mac.html?brand=CHKZ" target="_blank" class="png_bg browser_option chrome first">
+			<a href="http://www.google.com/chrome/" target="_blank" class="png_bg browser_option chrome first">
 				<div class="browser_name">Google Chrome</div>
 			</a>
 			<a href="http://www.firefox.com" target="_blank" class="png_bg browser_option firefox">
