added title and description to all marketing pages

--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}Sign up for an account at GoodCloud{% endblock %}
+{% block title %}Sign up for a free account at GoodCloud{% endblock %}
+{% block description %}See for yourself the best way to run a small nonprofit. Sign up for a free account right here!{% endblock %}
 
 {% block page_content %}
 <div class="signup_page">
