--- a/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}GoodCloud Features - how GoodCloud can help your nonprofit.{% endblock %}
+{% block title %}Contact us via phone, email, or right here on the website: GoodCloud{% endblock %}
+{% block description %}Sometimes, you just need to talk to someone - we're available to support the organizations we serve.{% endblock %}
 {% block extra_body %}class="contact_us"{% endblock %}
 
 {% block page_content %}
