--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}GoodCloud Features - how GoodCloud can help your nonprofit.{% endblock %}
+{% block title %}The features that small nonprofits really need: GoodCloud{% endblock %}
+{% block description %}We built GoodCloud collaboratively with small nonprofits, to do the things you do every day. Contact, volunteer, and donor tracking - it's all here.{% endblock %}
 
 {% block page_content %}
 <div class="page_header">All the things you need, nothing you don't.</div>
