--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n cache %}
-{% block title %}GoodCloud makes software for small nonprofits - Software that gives them Superpowers!{% endblock %}
+{% block title %}Contact, volunteer, and donor management just for small nonprofits{% endblock %}
+{% block description %}GoodCloud makes it easier to run your small nonprofit. Track people, donations, volunteers and more - it's superpowers for small nonprofits!{% endblock %}
 {% block extra_body %}class="home_page"{% endblock %}
 
 {% block page_content %}
