--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}Tour - see GoodCloud in action, and what motivates our team!{% endblock %}
+{% block title %}Tour - watch GoodCloud in action, and hear what motivates our team!{% endblock %}
+{% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 
 {% block page_content %}
 <div class="page_header">Watch it in action</div>
