--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}GoodCloud Pricing - one simple, affordable price.{% endblock %}
+{% block title %}Pricing: one simple, affordable plan. Priced for small nonprofits.{% endblock %}
+{% block description %}GoodCloud includes everything - no per-user fees, no contracts, no hidden costs. All priced based on real nonprofit budgets.{% endblock %}
 {% block head %}
 {% css "/css/mycelium_elements.css" %}
 {{block.super}}
