--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{% block title %}{% endblock %}</title>
-  <meta name="description" content="GoodCloud">
+  <meta name="description" content="{% block description %}{% endblock %}">
   <meta name="author" content="GoodCloud - Software for Nonprofits">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="{{FAVICON_URL}}">
