--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -46,7 +46,7 @@
 {% if not request.account.has_completed_all_challenges %}
 	<td class="full_col">
 		<column_header>GoodCloud Challenges</column_header>
-		<div class="challenge_description plain_text" >Complete the GoodCloud Challenges and receive a 50% discount on your first month of use. What's that you say? Half off just for setting things up and doing a quick tour? Are we crazy? Well, yes. But we really believe GoodCloud is the best solution out there for small nonprofits, and we're ready to prove it.</div>
+		<div class="challenge_description plain_text" >Complete the GoodCloud Challenges and receive an additional two weeks free. What's that you say? Half a month just for setting things up and doing a quick tour? Are we crazy? Well, yes. But we really believe GoodCloud is the best solution out there for small nonprofits, and we're ready to prove it.</div>
 
 		<challenge class="import {% if request.account.challenge_has_imported_contacts %}complete{% endif %}">
 			<title_text>Import your contacts.</title_text>
@@ -92,7 +92,7 @@
 		<div class="challenges_complete_section">
 		<column_header>GoodCloud Challenges</column_header>
 		<column_content class="completed_goodcloud_challenges plain_text">
-		You've completed all of the GoodCloud challenges, and earned half off your first month!  <span class="challenge_complete_btn_area"><a href="{% url dashboard:hide_challenge_complete_notice %}" class="hide_challenge_complete_link" >Hide this section in the future.</a></span>
+		You've completed all of the GoodCloud challenges, and earned two weeks free!  <span class="challenge_complete_btn_area"><a href="{% url dashboard:hide_challenge_complete_notice %}" class="hide_challenge_complete_link" >Hide this section in the future.</a></span>
 		</column_content>
 		</div>
 		{% endif %}
