new top nav, tweaks to home text

--- a/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
@@ -6,10 +6,11 @@
 	</a>
 <div id="main_nav">{% spaceless %}
 {# 	<a {% current_page_link_and_class request "marketing_site:home" "" %} >Home</a> #}
+<a {% current_page_link_and_class request "marketing_site:about_us" "" %} >Our Mission</a>
 	<a {% current_page_link_and_class request "marketing_site:features" "" %} >Features</a>
 	<a {% current_page_link_and_class request "marketing_site:tour" "" %} >Tour</a>
-	<a {% current_page_link_and_class request "marketing_site:praise" "" %} >Love</a>
 	<a {% current_page_link_and_class request "marketing_site:pricing" "" %} >Pricing</a>
+	<a {% current_page_link_and_class request "marketing_site:praise" "" %} >Newsletter</a>
 	<a {% current_page_link_and_class request "accounts:signup" "" %} >Free Trial</a>
 	
 {% endspaceless %}</div>
