--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -17,7 +17,11 @@
 
 		<div class="tab_subheading nonprofits_deserve">Small nonprofits deserve the best software in the world.</div>
 
-		<p>There, we said it. Not hand-me-downs, not corporate products that don't fit, but a real solution designed around your needs and how you work. We started GoodCloud after watching first-hand some of our favorite nonprofits struggle with a hodge-podge of programs. We heard stories of daily frustrations, and listened to organizations that were pouring hours into fighting with computers instead of their missions. We said, "Enough with that!", and we started GoodCloud to fix it.</p>
+		<p>There, we said it. Not hand-me-downs, not corporate products that don't fit, but a real solution designed around your needs and how you work.
+		Big nonprofits and companies can afford expensive solutions, or to hire staff.  But small nonprofits have always gotten the short straw - until now.</p>
+		
+		
+		 <p>We started GoodCloud after watching our favorite nonprofits struggle with a hodge-podge of programs. We saw daily frustrations, and listened to organizations that were pouring hours into fighting with computers instead of their missions. We said, "Enough with that!", and we started GoodCloud to fix it.</p>
 
 		<div class="tab_subheading">We &hearts; small nonprofits.</div>
 		<p>We care deeply about you and your mission. You've made the decision to make the world a better place instead of making piles of money. We admire you. Nonprofits are doing the biggest things to make the world a better place. We're thankful to have you in the world, and we want to help you thrive.</p>
