--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -8,6 +8,14 @@
 <div id="home_boxes">
 	<div class="container">
 	<div class="row">
+		<div class="fourcol home_box loved_by">
+
+			<div class="title">We &hearts; nonprofits.</div>
+			<div class="description png_bg identical_height_block">
+				We've been staff, donors, and volunteers. We care deeply about your mission. We also happen to be software ninjas.
+			</div>
+			<div class="action"><a href="{% url marketing_site:about_us %}">Learn about our mission!</a></div>
+		</div>
 		<div class="fourcol home_box built_for_nonprofits">
 			<div class="title">Built for Small Nonprofits</div>
 			<div class="description png_bg identical_height_block">
@@ -15,6 +23,7 @@
 			</div>
 			<div class="action"><a href="{% url marketing_site:features %}">Check out what it can do!</a></div>
 		</div>
+<!--
 		<div class="fourcol home_box loved_by">
 			<div class="title">Loved by Nonprofits</div>
 			<div class="description png_bg identical_height_block">
@@ -22,6 +31,7 @@
 			</div>
 			<div class="action"><a href="{% url marketing_site:praise %}">See what they had to say!</a></div>
 		</div>
+-->
 		<div class="fourcol home_box ready_to_go">
 			<div class="title">Ready to Go Today</div>
 			<div class="description png_bg identical_height_block">
