added our company

--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -9,16 +9,37 @@
 
 <div id="side_nav" class="tabs">
 	<ul class="nav_links png_bg">
+	 	<li><a href="#our_company">Our Company</a></li>
 	 	<li><a href="#our_mission">Our Mission</a></li>
 	 	<li><a href="#the_team">Our Team</a></li>
  	</ul>
+	<div class="tab_content company" id="our_company">
+
+		<div class="tab_subheading nonprofits_deserve">Do Good Things.</div>
+
+		<p>When we started GoodCloud, we set out to create the sort of company we'd be inspired by and hope to work for. So, we do things a bit differently.</p>
+
+		<div class="tab_subheading">We share our profits with the organizations we serve.</div>
+		<p>Each year, we set financial targets, goals to grow and sustain GoodCloud. When we hit those targets, the organizations that got us there share in our profits.</p>
+
+		<div class="tab_subheading">We volunteer.</div>
+		<p>GoodCloud employees are required to volunteer at least 10 hours a month with nonprofits, and that time is paid. {# TODO: Want to see if we've been slacking? See our donation log! #}</p>
+
+		<div class="tab_subheading">We donate.</div>
+		<p>GoodCloud employees also recieve stipends to donate to the nonprofits they love.</p>
+
+		<p>We do things a bit differently than some large corporations you may have heard of. We like it that way, and we think you will too.</p>
+
+
+	</div>
+	 	
 	<div class="tab_content mission" id="our_mission">
 		{# <div class="tab_title">Our Mission</div> #}
 
 		<div class="tab_subheading nonprofits_deserve">Small nonprofits deserve the best software in the world.</div>
 
 		<p>There, we said it. Not hand-me-downs, not corporate products that don't fit, but a real solution designed around your needs and how you work.
-		Big nonprofits and companies can afford expensive solutions, or to hire staff.  But small nonprofits have always gotten the short straw - until now.</p>
+		Big nonprofits and companies can afford expensive solutions or a tech staff.  But small nonprofits have always gotten the short straw - until now.</p>
 		
 		
 		 <p>We started GoodCloud after watching our favorite nonprofits struggle with a hodge-podge of programs. We saw daily frustrations, and listened to organizations that were pouring hours into fighting with computers instead of their missions. We said, "Enough with that!", and we started GoodCloud to fix it.</p>
@@ -31,8 +52,9 @@
 
 		<div class="tab_subheading">We only serve small nonprofits.</div>
 		<p>We're building you the best software in the world. But the cool part is, it's just for you.  You can't use GoodCloud unless you're a nonprofit.  Run a big company, and want our cool people-tracking software? Tough.  GoodCloud isn't the side project of a giant software maker, it's a small and nimble company that works exclusively with small nonprofits.  We like it that way, and we think you will too.</p>
-
 	</div>
+				
+
 
 	<div class="tab_content team" id="the_team">
 		<div class="tab_subheading team_description">GoodCloud is currently a team of two people. We're the ones who answer your calls, add new features, and talk with you about your needs.  Sounds a lot better than a call center halfway across the world, doesn't it? </div>
