--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -17,8 +17,10 @@
 	{% include "marketing_site/_top_nav.html" %}
 	<div class="clearfix"></div>
 	<div id="wrap">
+	<div class="page_content">
 	{% block page_content %}
 	{% endblock %}
+	</div>
 	</div>
 	{% include "marketing_site/_footer.html" %}	
 	<script type="text/javascript">
