--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -6,6 +6,7 @@
 {% block page_content %}
 <div class="page_header">All the things you need, nothing you don't.</div>
 
+<div class="page_content_body">
 <div class="features">
 <div class="container">
 	<div class="row">
@@ -95,7 +96,7 @@ We know you don’t have an IT department, and you don’t want to spend your da
 </div>
 <a href="{% url accounts:signup %}" class="page_action png_bg">Try GoodCloud today!</a>
 <div class="clearfix"></div>
-
+</div>
 
 
 {% endblock %}
