--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -246,7 +246,9 @@ input {
 #page_content p {
 	margin-top: 0px;
 }
-
+.page_content_body {
+/*	background-color: rgba(255,255,255,0.95);*/
+}
 
 .employee {
 	display: block;
