--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -7,6 +7,7 @@
 {% block page_content %}
 <div class="page_header about_us">Do Good Things.</div>
 
+<div class="page_content_body">
 <div id="side_nav" class="tabs">
 	<ul class="nav_links png_bg">
 	 	<li><a href="#our_company">Our Company</a></li>
@@ -88,7 +89,7 @@
 	
 </div>
 
-
+</div>
 
 
 {% endblock %}
